<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryBack">
    <LinearLayout
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:gravity="left"
            android:textSize="16dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_price_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="13dp"
                android:hint="@string/from"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_price_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:inputType="number"
                android:hint="@string/to"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/producer"
            android:gravity="left"
            android:textSize="16dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/producers_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_apply"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimaryBar"
            android:text="@string/apply"/>
    </LinearLayout>
</ScrollView>