<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:background="@color/colorPrimaryBack">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            card_view:cardCornerRadius="5dp"
            card_view:contentPadding="10dp"
            card_view:contentPaddingTop="10dp"
            card_view:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="17dp"
                    android:text="Телефоны:"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/phone_numbers"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/web_numbers"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="17dp"
                    android:text="Пункт выдачи заказов:"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/selfdelivery"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
</ScrollView>