<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryBack">
    <LinearLayout
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="70dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            card_view:cardCornerRadius="5dp"
            card_view:contentPadding="10dp"
            card_view:contentPaddingTop="10dp"
            card_view:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:text="@string/delivery"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Мы доставим вашу покупку в любою точку Минска."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#404040"
                    android:gravity="center"
                    android:text="Доставка курьером"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Цена:"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/delivery_small"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/delivery_big"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Время и место доставки дополнительно оговаривается при заказе."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:gravity="center"
                    android:textColor="#404040"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Самовывоз" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/delivery_adderss"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            card_view:cardCornerRadius="5dp"
            card_view:contentPadding="10dp"
            card_view:contentPaddingTop="10dp"
            card_view:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:text="@string/fee"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Независимо от выбранной формы оплаты, расчет производится только в белорусских рубля."
                   />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#404040"
                    android:gravity="center"
                    android:text="Наличный расчет"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Вы можете оплатить покупку при доставке, рассчитываясь с курьером наличными деньгами."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Если вы осуществляете самовывоз, оплату необходимо будет совершить в кассе пункта выдачи товара."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:gravity="center"
                    android:textColor="#404040"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Банковские карты" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Оплата курьеру при доставке. Сообщите выбранный способ оплаты во время заказа, и курьер приедет к вам с терминалом."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Также возможна оплата через терминалы во всех пунктах самовывоза."
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:gravity="center"
                    android:textColor="#404040"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Оплата банковской картой онлайн" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/fee_online"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>